turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:22: error: '=>' expected but '(' found.
    case (GAUCHE)(col)(1) => gauche(); avance()
                 ^Turmite:23: error: '=>' expected but '(' found.
    case (PDV)(col)(1) => avance()
              ^Turmite:24: error: '=>' expected but '(' found.
    case (DEMI)(col)(1) => droite();droite()
               ^Turmite:25: error: '=>' expected but '(' found.
    case (DROITE)(col)(1) => droite()
                 ^